crates/friction-cli/tests/snapshots/snapshot__explain__blog_human_016b54b46d29feb8.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
pass 1: 2 operation(s) fired
  vsub.leverage            3432..3446  -> "using the"
  sub.apply                7459..7468  -> "uses"
  1 held:
    ph.a-handful-of        4507..4519  KEPT (frame ph.a-handful-of held: right seam not attested)
  15 report-only observation(s) (--verbose to list)
pass 2: 0 operation(s) fired — converged
  1 held:
    ph.a-handful-of        4410..4565  KEPT (frame ph.a-handful-of held: right seam not attested)
  13 report-only observation(s) (--verbose to list)
pass 3: 0 operation(s) fired — converged
pass 4: 0 operation(s) fired — converged
  4 held:
    register.em_dash       2733..2743  KEPT (register held: matched inside quotation)
    register.em_dash       1005..1008  KEPT (em_dash: this instance has no licensed rewrite and the document is still above the human band (2.07 > 0.00 per 1000 words) — needs a human hand)
    register.em_dash       1122..1125  KEPT (em_dash: this instance has no licensed rewrite and the document is still above the human band (2.07 > 0.00 per 1000 words) — needs a human hand)
    register.past_progressive 6917..6925  KEPT (past_progressive: this instance has no licensed rewrite and the document is still above the human band (0.69 > 0.00 per 1000 words) — needs a human hand)
