crates/friction-cli/tests/snapshots/snapshot__explain__blog_llm_152f7fa1159f4910.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
pass 1: 5 operation(s) fired
  sub.apply                287..297  -> "matters"
  con.not-only-but-also    699..747  -> "meets our current needs and scales"
  sub.apply                1467..1478  -> "important for"
  pivot.lvc                5952..5969  -> "deciding"
  col.excellent-x::choice  6001..6018  -> "good choices"
  44 report-only observation(s) (--verbose to list)
pass 2: 1 operation(s) fired
  adv.ultimately-opener::lit 5848..5945  -> "The key takeaway is to carefully assess your application requirements before deciding"
  44 report-only observation(s) (--verbose to list)
pass 3: 2 operation(s) fired
  restructure.participial_closer 1588..1596  -> ". That makes"
  restructure.participial_closer 4559..4567  -> ". That makes"
  1 held:
    restructure.participial_closer 4084..4092  KEPT (restructure held: first resulting sentence's skeleton is not attested)
pass 4: 0 operation(s) fired — converged
  61 held:
    register.unpack        99..106  KEPT (nominalization: "venture" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        355..363  KEPT (nominalization: "business" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        487..495  KEPT (nominalization: "decision" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand (its verb is "decide"))
    register.unpack        556..567  KEPT (nominalization: "application" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        594..604  KEPT (nominalization: "management" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        762..775  KEPT (nominalization: "consideration" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        931..942  KEPT (nominalization: "Scalability" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        1096..1107  KEPT (nominalization: "replication" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        1542..1552  KEPT (nominalization: "Simplicity" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        1576..1588  KEPT (nominalization: "architecture" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        1683..1695  KEPT (nominalization: "intervention" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        1718..1727  KEPT (nominalization: "Community" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        1767..1776  KEPT (nominalization: "community" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        1791..1804  KEPT (nominalization: "documentation" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        1888..1895  KEPT (nominalization: "ability" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2061..2072  KEPT (nominalization: "flexibility" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2161..2170  KEPT (nominalization: "integrity" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2191..2202  KEPT (nominalization: "application" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2239..2250  KEPT (nominalization: "information" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2263..2271  KEPT (nominalization: "business" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2515..2528  KEPT (nominalization: "transactional" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2574..2587  KEPT (nominalization: "multi-version" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2588..2599  KEPT (nominalization: "concurrency" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2643..2654  KEPT (nominalization: "consistency" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2751..2761  KEPT (nominalization: "compliance" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2767..2781  KEPT (nominalization: "implementation" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand (its verb is "implement"))
    register.unpack        2880..2891  KEPT (nominalization: "Replication" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2926..2937  KEPT (nominalization: "replication" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        2968..2981  KEPT (nominalization: "configuration" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand (its verb is "configure"))
    register.unpack        2986..2996  KEPT (nominalization: "management" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3007..3018  KEPT (nominalization: "reliability" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3062..3071  KEPT (nominalization: "integrity" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3093..3102  KEPT (nominalization: "adherence" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3188..3196  KEPT (nominalization: "decision" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand (its verb is "decide"))
    register.unpack        3217..3228  KEPT (nominalization: "Performance" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3327..3338  KEPT (nominalization: "performance" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3597..3612  KEPT (nominalization: "Customizability" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3620..3627  KEPT (nominalization: "ability" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3707..3719  KEPT (nominalization: "manipulation" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3766..3777  KEPT (nominalization: "performance" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3894..3906  KEPT (nominalization: "architecture" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3947..3956  KEPT (nominalization: "Community" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3957..3968  KEPT (nominalization: "Performance" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        3989..3998  KEPT (nominalization: "community" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        4030..4042  KEPT (nominalization: "optimization" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand (its verb is "optimize"))
    register.unpack        4130..4141  KEPT (nominalization: "application" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        4226..4238  KEPT (nominalization: "optimization" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand (its verb is "optimize"))
    register.unpack        4243..4258  KEPT (nominalization: "customizability" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        4345..4356  KEPT (nominalization: "performance" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        4513..4520  KEPT (nominalization: "venture" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        4833..4843  KEPT (nominalization: "production" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        5083..5092  KEPT (nominalization: "community" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        5093..5100  KEPT (nominalization: "edition" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        5403..5411  KEPT (nominalization: "business" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        5568..5578  KEPT (nominalization: "production" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        5593..5604  KEPT (nominalization: "combination" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        5639..5648  KEPT (nominalization: "integrity" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        5659..5670  KEPT (nominalization: "performance" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.unpack        5790..5798  KEPT (nominalization: "decision" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand (its verb is "decide"))
    register.unpack        5901..5912  KEPT (nominalization: "application" has no licensed rewrite and the document is still above the human band (73.35 > 50.56 per 1000 words) — needs a human hand)
    register.past_progressive 3162..3172  KEPT (past_progressive: this instance has no licensed rewrite and the document is still above the human band (1.22 > 0.00 per 1000 words) — needs a human hand)
