crates/friction-cli/tests/snapshots/snapshot__explain__blog_llm_19f12335d308d0e0.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
pass 1: 4 operation(s) fired
  wrap.the-power-of        2585..2602  -> "Heap"
  vsub.utilize             2687..2697  -> "used a"
  sub.apply                5263..5271  -> "Use"
  adv.ultimately-opener::lit 6035..6229  -> "Tracking down this memory leak was a testament to the power of systematic investigation, combined with a deep understanding of our application’s architecture and potential pitfalls"
  3 held:
    vsub.navigate          585..597  KEPT (frame vsub.navigate held: slot head is a literal-motion object (navigate-literal-object guard))
    span.delete            3946..4100  KEPT (deletion span.simply held: SeamNotAttested)
    ph.the-importance-of   6422..6439  KEPT (frame ph.the-importance-of held: left seam not attested)
  43 report-only observation(s) (--verbose to list)
pass 2: 1 operation(s) fired
  wrap.the-power-of        6063..6086  -> "systematic"
  4 held:
    vsub.navigate          513..711  KEPT (frame vsub.navigate held: slot head is a literal-motion object (navigate-literal-object guard))
    span.delete            3929..4083  KEPT (deletion span.simply held: SeamNotAttested)
    design.is-testament-to::lit 6044..6066  KEPT (frame design.is-testament-to::lit held: left seam not attested)
    ph.the-importance-of   6336..6538  KEPT (frame ph.the-importance-of held: left seam not attested)
  41 report-only observation(s) (--verbose to list)
pass 3: 3 operation(s) fired
  restructure.participial_closer 2835..2846  -> ". That provides"
  restructure.participial_closer 4161..4170  -> ". That led"
  restructure.participial_closer 4674..4684  -> ". That allowed"
  2 held:
    restructure.participial_closer 2068..2076  KEPT (restructure held: second resulting sentence's skeleton is not attested)
    restructure.ensures_that 5644..5677  KEPT (restructure held: no licensed outer mood shape (unsupported construction))
pass 4: 3 operation(s) fired
  register.past_progressive 1623..1639  -> "accumulated"
  register.past_progressive 2880..2893  -> "consumed"
  register.past_progressive 4715..4730  -> "functioned"
  2 held:
    register.past_progressive 450..458  KEPT (past_progressive: this instance has no licensed rewrite and the document is still above the human band (2.20 > 0.00 per 1000 words) — needs a human hand)
    register.past_progressive 3886..3894  KEPT (past_progressive: this instance has no licensed rewrite and the document is still above the human band (2.20 > 0.00 per 1000 words) — needs a human hand)
