crates/friction-cli/tests/snapshots/snapshot__explain__docs_human_08d07d7b04ccd440.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
pass 1: 1 operation(s) fired
  edit.recapitalize        4..5  -> "I"
pass 2: 0 operation(s) fired — converged
