crates/friction-cli/tests/snapshots/snapshot__explain__docs_llm_00533d2e3a398154.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
pass 1: 1 operation(s) fired
  sub.apply                1980..1988  -> "uses"
pass 2: 0 operation(s) fired — converged
