crates/friction-cli/tests/snapshots/snapshot__explain__docs_llm_0a0197006e9ca159.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
pass 1: 3 operation(s) fired
  sub.apply                261..271  -> "matters"
  sub.apply                273..305  -> "This guide covers"
  nom.the-process-of::lit  306..338  -> "configuring these"
  16 held:
    vguard.ensure          159..165  KEPT (frame vguard.ensure: measured 1376.3/M machine vs 314.8/M human; report-only)
    vguard.configure       321..332  KEPT (frame vguard.configure: measured 510.6/M machine vs 442.2/M human; report-only)
    vguard.ensure          525..531  KEPT (frame vguard.ensure: measured 1376.3/M machine vs 314.8/M human; report-only)
    adjg.basic             745..750  KEPT (frame adjg.basic: measured 434.3/M machine vs 231.9/M human; report-only)
    adjg.suitable          1041..1049  KEPT (frame adjg.suitable: measured 76.3/M machine vs 67.6/M human; report-only)
    pilot.such-as          1072..1079  KEPT (frame pilot.such-as: report-only (see the frame-pack compile report))
    vsub.navigate          1027..1038  KEPT (frame vsub.navigate held: slot opens with a preposition (untested construction))
    vguard.designate       1490..1500  KEPT (frame vguard.designate: measured 29.3/M machine vs 24.6/M human; report-only)
    phg.if-necessary       1718..1730  KEPT (frame phg.if-necessary: measured 35.2/M machine vs 24.6/M human; report-only)
    phg.as-needed          2798..2807  KEPT (frame phg.as-needed: measured 85.1/M machine vs 38.4/M human; report-only)
    vguard.designate       3152..3162  KEPT (frame vguard.designate: measured 29.3/M machine vs 24.6/M human; report-only)
    vguard.ensure          3617..3623  KEPT (frame vguard.ensure: measured 1376.3/M machine vs 314.8/M human; report-only)
    intg.especially        3658..3668  KEPT (frame intg.especially: measured 226.0/M machine vs 141.3/M human; report-only)
    vguard.ensure          4051..4059  KEPT (frame vguard.ensure: measured 1376.3/M machine vs 314.8/M human; report-only)
    span.delete            3969..4117  KEPT (deletion span.by_following_these_steps_leading held: SkeletonNotAttested)
    rit.closer-follow-steps::lit 3969..4116  KEPT (frame rit.closer-follow-steps::lit held: ClauseIncomplete)
pass 2: 0 operation(s) fired — converged
  16 held:
    vguard.ensure          159..165  KEPT (frame vguard.ensure: measured 1376.3/M machine vs 314.8/M human; report-only)
    vguard.configure       288..299  KEPT (frame vguard.configure: measured 510.6/M machine vs 442.2/M human; report-only)
    vguard.ensure          475..508  KEPT (frame vguard.ensure: measured 1376.3/M machine vs 314.8/M human; report-only)
    adjg.basic             712..771  KEPT (frame adjg.basic: measured 434.3/M machine vs 231.9/M human; report-only)
    adjg.suitable          994..1046  KEPT (frame adjg.suitable: measured 76.3/M machine vs 67.6/M human; report-only)
    pilot.such-as          994..1046  KEPT (frame pilot.such-as: report-only (see the frame-pack compile report))
    vsub.navigate          994..1046  KEPT (frame vsub.navigate held: slot opens with a preposition (untested construction))
    vguard.designate       1390..1485  KEPT (frame vguard.designate: measured 29.3/M machine vs 24.6/M human; report-only)
    phg.if-necessary       1627..1698  KEPT (frame phg.if-necessary: measured 35.2/M machine vs 24.6/M human; report-only)
    phg.as-needed          2694..2776  KEPT (frame phg.as-needed: measured 85.1/M machine vs 38.4/M human; report-only)
    vguard.designate       3019..3140  KEPT (frame vguard.designate: measured 29.3/M machine vs 24.6/M human; report-only)
    vguard.ensure          3570..3688  KEPT (frame vguard.ensure: measured 1376.3/M machine vs 314.8/M human; report-only)
    intg.especially        3570..3688  KEPT (frame intg.especially: measured 226.0/M machine vs 141.3/M human; report-only)
    vguard.ensure          3936..4084  KEPT (frame vguard.ensure: measured 1376.3/M machine vs 314.8/M human; report-only)
    span.delete            3936..4084  KEPT (deletion span.by_following_these_steps_leading held: SkeletonNotAttested)
    rit.closer-follow-steps::lit 3936..4084  KEPT (frame rit.closer-follow-steps::lit held: ClauseIncomplete)
pass 3: 0 operation(s) fired — converged
  1 held:
    restructure.ensures_that 3584..3614  KEPT (restructure held: no licensed outer mood shape (unsupported construction))
pass 4: 0 operation(s) fired — converged
