crates/friction-cli/tests/snapshots/snapshot__explain__email_human_0ac47db2525fd485.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
pass 1: 2 operation(s) fired
  lex.embark::embark-journey 1352..1379  -> "began to"
  nom.the-process-of::lit  1772..1801  -> "finalising all"
  7 held:
    vguard.achieve         1681..1689  KEPT (frame vguard.achieve: measured 114.4/M machine vs 79.8/M human; report-only)
    vguard.highlight       2384..2394  KEPT (frame vguard.highlight: measured 123.2/M machine vs 90.6/M human; report-only)
    adjg.basic             2626..2631  KEPT (frame adjg.basic: measured 434.3/M machine vs 231.9/M human; report-only)
    adjg.simple            4292..4298  KEPT (frame adjg.simple: measured 748.3/M machine vs 317.9/M human; report-only)
    vguard.ensure          4686..4692  KEPT (frame vguard.ensure: measured 1376.3/M machine vs 314.8/M human; report-only)
    pilot.within           5627..5633  KEPT (frame pilot.within: report-only (see the frame-pack compile report))
    adjg.clear             5681..5688  KEPT (frame adjg.clear: measured 228.9/M machine vs 112.1/M human; report-only)
pass 2: 0 operation(s) fired — converged
  7 held:
    vguard.achieve         1615..1676  KEPT (frame vguard.achieve: measured 114.4/M machine vs 79.8/M human; report-only)
    vguard.highlight       2331..2361  KEPT (frame vguard.highlight: measured 123.2/M machine vs 90.6/M human; report-only)
    adjg.basic             2592..2649  KEPT (frame adjg.basic: measured 434.3/M machine vs 231.9/M human; report-only)
    adjg.simple            4159..4324  KEPT (frame adjg.simple: measured 748.3/M machine vs 317.9/M human; report-only)
    vguard.ensure          4624..4694  KEPT (frame vguard.ensure: measured 1376.3/M machine vs 314.8/M human; report-only)
    pilot.within           5593..5609  KEPT (frame pilot.within: report-only (see the frame-pack compile report))
    adjg.clear             5637..5786  KEPT (frame adjg.clear: measured 228.9/M machine vs 112.1/M human; report-only)
pass 3: 0 operation(s) fired — converged
