crates/friction-cli/tests/snapshots/snapshot__explain__email_llm_062a9d6f268e8994.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
pass 1: 5 operation(s) fired
  adjd.state-of-the-art    1040..1066  -> "equipment"
  adj.superb::invaluable   1773..1795  -> "a resource"
  vsub.showcase            1865..1875  -> "show a"
  adj.vibrant::vibrant     1876..1891  -> "pinkish"
  eml.feel-free-reach-out::lit 4009..4036  -> "contact me with"
  4 held:
    vsub.illuminate        1206..1220  KEPT (frame vsub.illuminate held: slot opens with a preposition (untested construction))
    con.not-only-but-also  1262..1303  KEPT (frame con.not-only-but-also held: skeleton not attested after rewrite)
    vsub.illuminate        1948..1962  KEPT (frame vsub.illuminate held: slot opens with a preposition (untested construction))
    vsub.showcase          3383..3393  KEPT (frame vsub.showcase held: left seam not attested)
  9 report-only observation(s) (--verbose to list)
pass 2: 0 operation(s) fired — converged
  4 held:
    vsub.illuminate        1110..1216  KEPT (frame vsub.illuminate held: slot opens with a preposition (untested construction))
    con.not-only-but-also  1217..1324  KEPT (frame con.not-only-but-also held: skeleton not attested after rewrite)
    vsub.illuminate        1907..1921  KEPT (frame vsub.illuminate held: slot opens with a preposition (untested construction))
    vsub.showcase          3314..3352  KEPT (frame vsub.showcase held: left seam not attested)
  9 report-only observation(s) (--verbose to list)
pass 3: 2 operation(s) fired
  restructure.participial_closer 1049..1057  -> ". That made"
  restructure.participial_closer 1744..1752  -> ". That makes"
pass 4: 1 operation(s) fired
  register.em_dash         2163..2166  -> ", "
