crates/friction-cli/tests/snapshots/snapshot__explain__email_quarantine_026f8f57c3920652.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
METRIC                        BEFORE    AFTER  BAND                MOVEMENT  
sentence_length_mean          3.8245   3.8245  [3.7147, 8.3678]    in -> in  
sentence_length_stddev        4.2192   4.2192  [3.8429, 8.5614]    in -> in  
sentence_length_cv            1.1032   1.1032  [0.8694, 1.1405]    in -> in  
discourse_marker_density      0.0000   0.0000  [0.0000, 0.0000]    in -> in  
triad_rate                    0.0000   0.0000  [0.0000, 0.0169]    in -> in  
contraction_ratio             0.5000   0.5000  [0.0000, 0.5714]    in -> in  
bullet_parallelism            0.9442   0.9442  [0.6320, 0.8533]    OUT -> OUT
paragraph_shape_mean          1.1136   1.1136  [1.0926, 1.2222]    in -> in  
paragraph_shape_cv            0.3325   0.3325  [0.2877, 0.4873]    in -> in  
em_dash_density               0.0000   0.0000  [0.0000, 1.2285]    in -> in  
semicolon_density             0.0000   0.0000  [0.0000, 1.6207]    in -> in  
participial_closer_rate       0.0000   0.0000  [0.0000, 0.0064]    in -> in  
not_just_but_rate             0.0000   0.0000  [0.0000, 0.0000]    in -> in  
ritual_marker_rate            0.0000   0.0000  [0.0000, 0.0000]    in -> in  
llm_favored_phrase_rate       8.0925   8.0925  [3.5928, 14.8957]   in -> in  
human_favored_phrase_rate    12.7168  12.7168  [10.1215, 27.7537]  in -> in  
heading_density              19.6532  19.6532  [5.7582, 19.1617]   OUT -> OUT
list_item_density            76.3006  76.3006  [12.2581, 80.2920]  in -> in  
bold_span_density             0.0000   0.0000  [0.0000, 6.4516]    in -> in  
sentence_opener_repeat_rate   0.0082   0.0082  [0.0038, 0.0448]    in -> in  
top_opener_concentration      0.0749   0.0749  [0.0485, 0.1739]    in -> in  

plan schedule (friction-plan, built from the document's original metrics):
| family | budget | metric | current | lo | hi | excess |
|---|---|---|---|---|---|---|
| structural | 0 | bold_span_density | 0.0000 | 0.0000 | 6.4516 | 0.0000 |
|  |  | list_item_density | 76.3006 | 12.2581 | 80.2920 | 0.0000 |
|  |  | heading_density | 19.6532 | 5.7582 | 19.1617 | 0.4915 |
| symmetry | 0 | not_just_but_rate | 0.0000 | 0.0000 | 0.0000 | 0.0000 |
|  |  | participial_closer_rate | 0.0000 | 0.0000 | 0.0064 | 0.0000 |
|  |  | ritual_marker_rate | 0.0000 | 0.0000 | 0.0000 | 0.0000 |
|  |  | triad_rate | 0.0000 | 0.0000 | 0.0169 | 0.0000 |
| connective | 0 | discourse_marker_density | 0.0000 | 0.0000 | 0.0000 | 0.0000 |
| lexical | 0 | discourse_marker_density | 0.0000 | 0.0000 | 0.0000 | 0.0000 |
|  |  | llm_favored_phrase_rate | 8.0925 | 3.5928 | 14.8957 | 0.0000 |
| rhythm | 0 | sentence_length_cv | 1.1032 | 0.8694 | 1.1405 | 0.0000 |
| contraction | 0 | contraction_ratio | 0.5000 | 0.0000 | 0.5714 | 0.0000 |

fixpoint: 1 round(s), 0 patch(es) applied
